--- a/secretary.html
+++ b/secretary.html
@@ -330,7 +330,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p>© 2025 Proemirazone. All Rights Reserved | Designed & Developed by Infinity Codes</p>
+                    <p>© 2025 Proemirazone. All Rights Reserved </p>
                 </div>
                 <div class="col-md-6">
                     <div class="footer-links">
